github link added

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <div class="user-info">
       <p><i class="bi bi-person-circle mx-2"></i><strong>{{name}}</strong></p>
       <p><i class="bi bi-telephone-plus-fill mx-2"></i><strong>{{phone}}</strong></p>
-      <p><i class="bi bi-github mx-2"></i><strong>{{githubLink}}</strong></p>
+      <p><i class="bi bi-github mx-2"></i><strong><a [href]="githubLink">{{githubLink}}</a></strong></p>
       <p><i class="bi bi-link mx-2"></i><strong>{{projectLink}}</strong></p>
     </div>
   </div>
