--- a/src/app/components/main-page/main-page.component.css
+++ b/src/app/components/main-page/main-page.component.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 85vh;
-    text-align: center;
+    text-align: left;
   }
   
   .user-info {
