--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -30,7 +30,7 @@ th, td {
 
 .centered-links {
     text-align: center;
-    margin-top: 20px; /* Linklerin üstünde bir boşluk bırakabilirsiniz */
+    margin-top: 20px; 
   }
   
   .centered-links a {
@@ -42,3 +42,13 @@ th, td {
   h2{
     text-align: center;
 }
+
+.user-info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 81vh;
+    text-align: left;
+  }
+  
