--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,5 @@
 <h2>{{title}}</h2>
+<div class="user-info-container">
 <table class="mt-2 mb-2">
     <tr>
         <td >Adı</td>
@@ -34,3 +35,4 @@
     <a routerLink="/profile/balances">Bakiyeler</a>
     <a routerLink="/profile/open-orders">Açık Emirler</a>
   </div>
+</div>
