--- a/src/app/components/markets/markets.component.html
+++ b/src/app/components/markets/markets.component.html
@@ -6,7 +6,7 @@
       <span class="visually-hidden">Loading...</span>
     </div>
   </div> 
-<div class="table-responsive mt-2 mb-2" style="padding: 1rem;">
+<div class="mt-2 mb-2" style="padding: 1rem;">
     <table class="table table-bordered table-hover table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead>
           <tr>
