--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,11 +1,3 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
 table {
     width: 60%;
     border-collapse: collapse;
@@ -17,19 +9,8 @@ th, td {
     padding: 10px;
 }
 
-@media (max-width: 768px) {
-    table {
-        width: 100%;
-    }
-
-    th, td {
-        display: block;
-        width: 100%;
-    }
-}
-
 .centered-links {
-    text-align: center;
+    text-align: justify;
     margin-top: 20px; 
   }
   
@@ -52,3 +33,9 @@ th, td {
     text-align: left;
   }
   
+  @media screen and (max-width: 768px) {
+    .user-info {
+        width: 80%;
+        margin: 0 auto; 
+    }
+  }
