--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -6,7 +6,11 @@
       <p><i class="bi bi-github mx-2"></i><strong><a [href]="githubLink">{{githubLink}}</a></strong></p>
       <p><i class="bi bi-link mx-2"></i><strong>{{projectLink}}</strong></p>
     </div>
+    <div class="centered-links">
+      <a routerLink="/markets"><i class="bi bi-currency-exchange mx-2" style="font-size: larger; color: green;"></i>Market Verilerini Görüntüle</a>
+    </div>
   </div>
-  
+
+
 
   
