project link added

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -4,7 +4,7 @@
       <p><i class="bi bi-person-circle mx-2"></i><strong>{{name}}</strong></p>
       <p><i class="bi bi-telephone-plus-fill mx-2"></i><strong>{{phone}}</strong></p>
       <p><i class="bi bi-github mx-2"></i><strong><a [href]="githubLink">{{githubLink}}</a></strong></p>
-      <p><i class="bi bi-link mx-2"></i><strong>{{projectLink}}</strong></p>
+      <p><i class="bi bi-link mx-2"></i><strong><a [href]="projectLink">{{projectLink}}</a></strong></p>
     </div>
     <div class="centered-links">
       <a routerLink="/markets"><i class="bi bi-currency-exchange mx-2" style="font-size: larger; color: green;"></i>Market Verilerini Görüntüle</a>
