--- a/src/app/components/markets/markets.component.css
+++ b/src/app/components/markets/markets.component.css
@@ -9,3 +9,52 @@ li {
     background: #f4f4f4;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   }
+
+  .responsive-image {
+    max-width: 100%;
+    height: auto;
+  }
+
+
+  @media (min-width: 1281px) and (max-width: 1500px)  {
+    .responsive-image {
+        max-width: 80%;
+      }
+      .modal{
+        margin-left: 5rem;
+        width:60% ;
+      }
+    
+  
+  }
+
+  @media (min-width: 1025px) and (max-width: 1280px) {
+    .responsive-image {
+        max-width: 80%;
+      }
+      .modal{
+        width:70% ;
+        margin-left: 1rem;
+      }
+  }
+  
+  
+  @media (min-width: 768px) and (max-width: 1024px) {
+    .responsive-image {
+        max-width:70%;
+      }
+  }
+  
+  
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .responsive-image {
+        max-width: 70%;
+      }
+  }
+  
+  
+  @media (min-width: 481px) and (max-width: 767px) {
+    .responsive-image {
+        max-width: 60%;
+      } 
+  }
