--- a/src/app/components/markets/markets.component.html
+++ b/src/app/components/markets/markets.component.html
@@ -54,7 +54,7 @@
             </ul>
             </div>
             <div class="col-md-4">
-              <img [src]="logo" alt="" style="width: 300px;"/>
+              <img [src]="logo" alt=""  class="responsive-image"/>
             </div>
           </div> 
         </div>
